# FileIndexer

./: .gitignore  BENCHMARKING_STATUS.md  README.md  create-launcher.sh  install.sh  start-fileindexer.sh  stop-fileindexer.sh
backend/: config.py  file_processor.py  generate_embedding.py  indexer.py  main.py  requirements.txt
backend/benchmarking/: benchmark.py  fetch_docbank_pdfs.py  fetch_gutenberg_texts.py
backend/benchmarking/benchmarks/: results.csv  results.md
backend/native/fileindexer_extract/: Cargo.toml  pyproject.toml
backend/native/fileindexer_extract/src/: lib.rs
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.js  page.js
frontend/src/components/: FileListPanel.jsx  IndexingPanel.jsx  SearchBar.jsx  SearchResults.jsx
frontend/src/lib/: api.js
