[package]
name = "fileindexer_extract"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "fileindexer_extract"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.29.0"
pdf-extract = "0.7"
zip = { version = "8.6.0", default-features = false, features = ["deflate"] }
quick-xml = "0.41.0"
